Pull in the pusher sdk

--- a/src/composer.json
+++ b/src/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "twilio/sdk": "3.12.2"
+        "twilio/sdk": "3.12.2",
+        "pusher/pusher-php-server": "dev-master"
     }
 }
